test card images alignment and fix word wrap to not be wrapped to new row and use flex property to the first and second flex items so that the first item sticks to left and does not grow and shrink but second item is set to 1 which centers the item in remaining space of container.

--- a/src/style.css
+++ b/src/style.css
@@ -811,22 +811,24 @@ width: 100%;
     
     #section-7-parent-container {
         width: 100%;
-        height: auto;
-        background-color: var(--primary-background-color);
+        height: 609px;
+        
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         /* padding: 200px 0; */
         
         position: relative;
-        
-        
+        overflow: hidden;
+        background-color: var(--primary-background-color);
     }
     #section-7-image-container {
-        width: 60%;
-        height: auto;
+        flex: 0 0 auto;
+        width: 50%;
+        height: 100%;
     /* border: 3px solid black;     */
-    
+    background-color: var(--secondary-background-color);
+    overflow: hidden;
     }
     #section-7-image-wrapper {
         width: 100%;
@@ -835,19 +837,20 @@ width: 100%;
         overflow: hidden;
     }
     #section-7-image-wrapper img {
-     /* object-fit: cover; */
         
         width: 100%;
         height: auto;
     
     }
     #section-7-text-container {
-    
+        flex: 1;
+    /* border: 3px solid black; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 100px;
+    padding: 0 50px;
+    
         background-color: var(--primary-background-color);
     
     }
@@ -871,14 +874,14 @@ width: 100%;
         font-family: var(--secondary-paragraph-font-family);
         margin-bottom: 20px;
     }
-    #section-7-text-container ul {
+    #section-7-text-container li:nth-child(4) {
     margin-bottom: 50px;
     
     }
     #section-7-text-container li {
         list-style-type: none;
         color: black;
-        width: 25ch;
+        /* width: 25ch; */
         padding-bottom: 25px;
         line-height: 1.2;
     
@@ -902,7 +905,7 @@ width: 100%;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-
+/* border: 3px solid black; */
     
     
     }
@@ -943,7 +946,7 @@ width: 100%;
     justify-content: center;
     align-items: center;
     padding: 100px 0;
-    row-gap: 100px;
+    row-gap: 75px;
     }
     #section-10-parent-container h2 {
         text-transform: uppercase;
